# plec

./: .gitignore  README.txt  compile.sh  mkcorebin.sh  roadmap.txt  version.h
core/: CMakeLists.txt  asttype.cpp  asttype.hpp  exceptions.cpp  exceptions.hpp  expressionparsing.cpp  expressionparsing.hpp  lexer.cpp  lexer.hpp  operators.cpp  operators.hpp  runner.hpp  statementstream.cpp  statementstream.hpp  token.hpp  tokenid.cpp  tokenid.hpp
core.bin/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
core/ast/: addexpr.cpp  addexpr.hpp  arrayexpr.cpp  arrayexpr.hpp  ast.cpp  ast.hpp  astvisitable.hpp  binopexpression.cpp  binopexpression.hpp  blockexpr.cpp  blockexpr.hpp  curlybrexpr.cpp  curlybrexpr.hpp  declexpr.cpp  declexpr.hpp  expression.cpp  expression.hpp  expressions.hpp  file.cpp  file.hpp  functioncallexpr.cpp  functioncallexpr.hpp  operatorexpression.hpp  program.cpp  program.hpp  programstmt.cpp  programstmt.hpp  statement.cpp  statement.hpp  statementlist.cpp  statementlist.hpp  stringexpr.hpp  target.cpp  target.hpp  targettype.cpp  targettype.hpp  variableassignexpr.cpp  variableassignexpr.hpp  variableexpr.hpp
core/exceptions/: ambiguousstatement.cpp  ambiguousstatement.hpp  badassign.cpp  badassign.hpp  badcall.cpp  badcall.hpp  unexpectedtoken.cpp  unexpectedtoken.hpp  unknownfilename.cpp  unknownfilename.hpp  unknowntoken.cpp  unknowntoken.hpp
core/runners/: astconfigure.cpp  astconfigure.hpp  astrunner.cpp  astrunner.hpp
core/stmtstreams/: block.cpp  block.hpp  file.cpp  file.hpp
core/visitors/: astvisitor.hpp
core/visitors/ast/: print.cpp  print.hpp
examples/: decl.ple  goodbye.ple  hello.ple  something.ple
plec/: CMakeLists.txt  plec.cpp
plec.bin/: CMakeCache.txt  Makefile  cmake_install.cmake  plec
plec.bindb/: CMakeCache.txt  Makefile  cmake_install.cmake  plec
temporarily_removed/: CMakeLists.txt  cst.cpp  cst.hpp  cstnode.hpp
tests/: CMakeLists.txt  basic.cpp  getnextstatement.cpp  getnextstatement.ple  parseblocks.cpp  parsedecl.cpp  regress-23.cpp  regress-23.ple  targets.cpp  targets2.ple  test.cpp  test.hpp
